# herox_robot

./: README.md
herox_base/: CMakeLists.txt  package.xml
herox_base/config/: apriltag_settings.yaml  apriltag_tags.yaml  driver.yaml  laserscan_filter.yaml  roboteq_motor_controllers_v60.eds
herox_base/launch/: apriltag.launch  base.launch  base_vel.launch  lasers.launch  motors.launch  testing.launch  wheel_control_debug.launch
herox_base/scripts/: approach_marker.py
herox_robot/: CMakeLists.txt  package.xml
